deepfence_ui/app/styles/compliance-check/styles.scss
@import '../deepfence';
@import '../variables';

.compliance-check-view {
  background-color: $flex-box-background;
  .rt-table {
    margin-top: 60px;
  }
  .compliance-check-form {
    // border-bottom: 1px solid $border-color;

    .section-header {
      padding: 10px 0;

      .title {
        font-size: 90%;
        text-transform: uppercase;
        font-weight: bold;
      }

      .icon {
        font-size: 20px;
      }
    }

    .section-body {
      font-size: 14px;

       .info {
          margin-top: 10px;
       }

        .form-field {
          margin-top: 10px;

          .label {
            margin-left: 5px;

            .label-info {
              margin: 5px;
            }
          }

          .sub-heading {
            margin-bottom: 8px;
          }

          .link {
            color: $active-color;
            cursor: pointer;
          }

          .input-field {
            width: 50%;
            display: inline-block;
            font-family: unset;

            label {
              margin: unset;
              display: unset;
            }
          }
          .primary-btn {
            color: #fff;
            border: 1px solid #007FFF;
            background-color: $color-primary;
            max-width: 160px;
            height: 40px;
            border-radius: 4px;
            font-size: 14px;
          }
        }

        .compliance-check-field {
          position: relative;
        }

        .message {
          margin-left: 5px;
          font-style: italic;
          font-size: 12px;
        }

        .form-field:last-child {
          margin-bottom: 10px;
        }
        .df-checkbox-group {
          .df-checkbox-button {
            position: relative;
            &>label {
              margin-left: 5px;
            }
          }
        }
    }
  }
}

@mixin vertical-align {
  border-radius: 50px;
  height: 25px;
  line-height: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.compliance-cis-info, .compliance-hipaa-info, .compliance-gdpr-info, .compliance-soc2-info, .compliance-pci-info, .compliance-nist-info {
  color: $low-alert-color;
  background-color: transparent;

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 6px 0 6px;
    min-width: 70px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }

  &.box {
    border: 1px solid $low-alert-color;
  }
}

.compliance-cis-ok, .compliance-cis-pass, .compliance-gdpr-pass, .compliance-pci-pass, .compliance-nist-pass,  .compliance-gdpr-ok, .compliance-pci-ok, .compliance-nist-ok, .compliance-hipaa-pass, .compliance-soc2-ok, .compliance-hipaa-ok {
  color: $color-success;
  background-color: transparent;

  &.box {
    border: 1px solid $color-success;
  }

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 6px 0 6px;
    min-width: 70px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }
}

.compliance-cis-warn, .compliance-cis-note, .compliance-hipaa-warn, .compliance-gdpr-warn, .compliance-pci-warn, .compliance-nist-warn, .compliance-cis-alarm, .compliance-hipaa-alarm, .compliance-gdpr-alarm, .compliance-pci-alarm, .compliance-nist-alarm, .compliance-soc2-alarm {
  color: $critical-alert-color;
  background-color: transparent;

  &.box {
    border: 1px solid $critical-alert-color;
  }

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 6px 0 6px;
    min-width: 70px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }
}

.compliance-standard-notselected, .compliance-pcidss-notselected, .compliance-hipaa-notselected, .compliance-mission_critical_classified-notselected {
  color: $high-alert-color;
  background-color: transparent;

  &.box {
    border: 1px solid $high-alert-color;
  }

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 6px 0 6px;
    min-width: 70px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }
}

.compliance-hipaa-note, .compliance-gdpr-note, .compliance-pci-note, .compliance-nist-note, .compliance-cis-skip,.compliance-gdpr-skip, .compliance-hipaa-skip, .compliance-pci-skip, .compliance-soc2-skip, .compliance-nist-skip {
  color: $medium-alert-color;
  background-color: transparent;

  &.box {
    border: 1px solid $medium-alert-color;
  }

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 6px 0 6px;
    min-width: 70px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }
}

.compliance-standard-notchecked, .compliance-pcidss-notchecked, .compliance-hipaa-notchecked, .compliance-mission_critical_classified-notchecked {
  color: $orange-border;
  background-color: transparent;

  &.box {
    border: 1px solid $orange-border;
  }

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 20px 0 20px;
    min-width: 100px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }
}

.compliance-standard-fixed, .compliance-pcidss-fixed, .compliance-hipaa-fixed, .compliance-mission_critical_classified-fixed {
  color: $grey-border;
  background-color: transparent;

  &.box {
    border: 1px solid $grey-border;
  }

  &.label {
    display: inline-flex !important;
    @include vertical-align;
    text-transform: capitalize;
    padding: 0 20px 0 20px;
    min-width: 100px;
  }

  &.value {
    padding: 0 5px 0 5px;
    display: inline;
  }
}
/* ... */

